syntax = "proto3";

package api.v1;

import "v1/common.proto";

option go_package = "github.com/damejeras/goose/api/gen/go/v1";

// Auth service for user authentication
service AuthService {
  // Login with Google ID token
  rpc Login(LoginRequest) returns (LoginResponse) {}
  // Get current authenticated user
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse) {}
  // Logout
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string google_id_token = 1;
}

message LoginResponse {
  string jwt = 1;
  User user = 2;
}

message GetCurrentUserRequest {}

message GetCurrentUserResponse {
  User user = 1;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}
